--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,3 +6,10 @@ blockquote {
     padding-top: 5px;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  label {
+    font-size: 3.5vw;
+    font-size: 3.5vw;
+  }
+}
