--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,15 +1,16 @@
+body {
+  padding-top: 50px;
+}
+
+.starter-template {
+  padding: 10px 0px;
+}
+
 blockquote {
   padding-left: 1em;
   padding-top: 10px;
 
   p {
     padding-top: 5px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  label {
-    font-size: 3.5vw;
-    font-size: 3.5vw;
   }
 }
